// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image should render 1`] = `
<figure
  className=""
>
  <img
    alt="Alternative text"
    className=""
    height={500}
    src="image.png"
    width={500}
  />
</figure>
`;

exports[`Image should render with caption 1`] = `
<figure
  className=""
>
  <img
    alt="Alternative text"
    className=""
    height={500}
    src="image.png"
    width={500}
  />
  <figcaption
    className=""
  >
    An image caption
  </figcaption>
</figure>
`;
